@@ -128,13 +128,13 @@
 <br/>Example: <span class="ep_form_example">http://www.stuffjournal.com/2003/3/</span>
 </epp:phrase>
     
-	<epp:phrase id="eprint_fieldname_related_url">Related URL</epp:phrase>
-	<epp:phrase id="eprint_fieldhelp_related_url"></epp:phrase>
+	<epp:phrase id="eprint_fieldname_related_url">Related URLs</epp:phrase>
+	<epp:phrase id="eprint_fieldhelp_related_url">URLs that are related to this item.</epp:phrase>
 	<epp:phrase id="eprint_fieldname_related_url_url">URL</epp:phrase>
 	<epp:phrase id="eprint_fieldname_related_url_type">URL Type</epp:phrase>
 	<epp:phrase id="eprint_fieldopt_related_url_type_pub">Publisher</epp:phrase>
 	<epp:phrase id="eprint_fieldopt_related_url_type_org">Organisation</epp:phrase>
-	<epp:phrase id="eprint_fieldopt_related_url_type_auth">Authoritative</epp:phrase>
+	<epp:phrase id="eprint_fieldopt_related_url_type_author">Author</epp:phrase>
 
     <epp:phrase id="eprint_fieldname_editors_name">Editors</epp:phrase>
     <epp:phrase id="eprint_fieldhelp_editors_name">Please enter the names of the editors.<br/>
@@ -146,7 +146,7 @@ This field is required if no creators are listed.
     <epp:phrase id="eprint_fieldhelp_date">The date this EPrint was completed, submitted to a publisher, published or submitted for a Ph.D.</epp:phrase>
     
 	<epp:phrase id="eprint_fieldname_date_type">Date Type</epp:phrase>
-	<epp:phrase id="eprint_fieldhelp_date_type"></epp:phrase>
+	<epp:phrase id="eprint_fieldhelp_date_type">The event to which the date applies.</epp:phrase>
     <epp:phrase id="eprint_fieldopt_date_type_published">Publication</epp:phrase>
     <epp:phrase id="eprint_fieldopt_date_type_submitted">Submission</epp:phrase>
     <epp:phrase id="eprint_fieldopt_date_type_completed">Completion</epp:phrase>
